Bug 422029 - System Settings crash when trying to start Yast
Summary: System Settings crash when trying to start Yast
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.18.5
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-05-24 19:11 UTC by john doe
Modified: 2020-06-03 11:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description john doe 2020-05-24 19:11:04 UTC
Application: systemsettings5 (5.18.5)

Qt Version: 5.14.1
Frameworks Version: 5.70.0
Operating System: Linux 5.6.12-1-default x86_64
Windowing system: X11
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:
clicked on Yast in System Settings

The duplicates suggested to me when submitting all linked to original reports stating it's fixed, however it happens here with 100% rate. Launching Yast manually works perfectly fine.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f440d9f3f00 (LWP 5556))]

Thread 11 (Thread 0x7f43f71af700 (LWP 5567)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f440329ff13 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a67 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7f4400a2a700 (LWP 5566)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f440329ff13 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a67 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7f440122b700 (LWP 5565)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f440329ff13 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a67 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7f4401a2c700 (LWP 5564)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f440329ff13 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a67 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7f440222d700 (LWP 5563)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f44032a7d25 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a47 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7f4402a2e700 (LWP 5562)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f44032a7d25 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a47 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f4408a13700 (LWP 5561)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f44032a7d25 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a47 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f4409214700 (LWP 5560)):
#0  0x00007f440eeeb795 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f44032a7d25 in ?? () from /usr/lib64/dri/swrast_dri.so
#2  0x00007f4403296a47 in ?? () from /usr/lib64/dri/swrast_dri.so
#3  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#4  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f440aa28700 (LWP 5559)):
#0  0x00007f4410335acf in poll () from /lib64/libc.so.6
#1  0x00007f440e4e49de in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f440e4e4aff in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f44108debeb in QEventDispatcherGlib::processEvents (this=0x7f43fc000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f4410886b7b in QEventLoop::exec (this=this@entry=0x7f440aa27d70, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#5  0x00007f44106b15ce in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#6  0x00007f440f5d6507 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f44106b2698 in QThreadPrivate::start (arg=0x7f440f658da0) at thread/qthread_unix.cpp:342
#8  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#9  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f440b8e9700 (LWP 5558)):
#0  0x00007f4410335acf in poll () from /lib64/libc.so.6
#1  0x00007f440eeb4772 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007f440eeb543a in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f440baf8ab0 in QXcbEventQueue::run (this=0x563c570181d0) at qxcbeventqueue.cpp:228
#4  0x00007f44106b2698 in QThreadPrivate::start (arg=0x563c570181d0) at thread/qthread_unix.cpp:342
#5  0x00007f440eee4efa in start_thread () from /lib64/libpthread.so.0
#6  0x00007f44103403bf in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f440d9f3f00 (LWP 5556)):
[KCrash Handler]
#4  0x00007f441027cea1 in raise () from /lib64/libc.so.6
#5  0x00007f441026653d in abort () from /lib64/libc.so.6
#6  0x00007f4410679aef in qt_message_fatal (context=..., message=<synthetic pointer>...) at global/qlogging.cpp:1894
#7  QMessageLogger::fatal (this=this@entry=0x7ffef3914ba0, msg=msg@entry=0x7f4411ad5880 "Accessed invalid KPluginInfo object") at global/qlogging.cpp:893
#8  0x00007f4411a830db in KPluginInfo::setPluginEnabled (enabled=<optimized out>, this=<optimized out>) at /usr/include/qt5/QtCore/qlogging.h:90
#9  0x00007f4411a830f3 in KPluginInfo::service (this=<optimized out>) at /usr/include/qt5/QtCore/qlogging.h:90
#10 0x00007f4411e6e6d5 in KCModuleInfo::service (this=this@entry=0x563c572e9138) at /usr/src/debug/kcmutils-5.70.0-1.1.x86_64/src/kcmoduleinfo.cpp:165
#11 0x00007f4411e9120f in ModuleView::addModule (this=this@entry=0x563c57496080, module=0x563c572e9138) at /usr/src/debug/systemsettings5-5.18.5-1.1.x86_64/core/ModuleView.cpp:160
#12 0x00007f4411e9325d in ModuleView::loadModule (menuItem=..., this=0x563c57496080) at /usr/src/debug/systemsettings5-5.18.5-1.1.x86_64/core/ModuleView.cpp:150
#13 ModuleView::loadModule (this=0x563c57496080, menuItem=...) at /usr/src/debug/systemsettings5-5.18.5-1.1.x86_64/core/ModuleView.cpp:134
#14 0x00007f44108bc9de in QtPrivate::QSlotObjectBase::call (a=0x7ffef3914e30, r=0x563c574952f0, this=0x563c574f4280) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#15 doActivate<false> (sender=0x563c574a8e40, signal_index=10, argv=0x7ffef3914e30) at kernel/qobject.cpp:3870
#16 0x00007f44108b719f in QMetaObject::activate (sender=sender@entry=0x563c574a8e40, m=m@entry=0x7f44118b2c40 <QAbstractItemView::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffef3914e30) at kernel/qobject.cpp:3930
#17 0x00007f44115f8955 in QAbstractItemView::activated (this=this@entry=0x563c574a8e40, _t1=...) at .moc/moc_qabstractitemview.cpp:668
#18 0x00007f44115fcb15 in QAbstractItemView::mouseReleaseEvent (this=0x563c574a8e40, event=<optimized out>) at itemviews/qabstractitemview.cpp:1940
#19 0x00007f441164355f in QListView::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at itemviews/qlistview.cpp:801
#20 0x00007f44100d1bf3 in KCategorizedView::mouseReleaseEvent (this=0x563c574a8e40, event=0x7ffef3915810) at /usr/src/debug/kitemviews-5.70.0-1.1.x86_64/src/kcategorizedview.cpp:1035
#21 0x00007f44113d65ae in QWidget::event (this=this@entry=0x563c574a8e40, event=event@entry=0x7ffef3915810) at kernel/qwidget.cpp:8675
#22 0x00007f441148500e in QFrame::event (this=0x563c574a8e40, e=0x7ffef3915810) at widgets/qframe.cpp:550
#23 0x00007f44116068ae in QAbstractItemView::viewportEvent (this=0x563c574a8e40, event=0x7ffef3915810) at itemviews/qabstractitemview.cpp:1754
#24 0x00007f4410887cf3 in QCoreApplicationPrivate::sendThroughObjectEventFilters (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.cpp:1218
#25 QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x563c574ad8f0, event=event@entry=0x7ffef3915810) at kernel/qcoreapplication.cpp:1207
#26 0x00007f4411393c9e in QApplicationPrivate::notify_helper (this=this@entry=0x563c56fdfc00, receiver=receiver@entry=0x563c574ad8f0, e=e@entry=0x7ffef3915810) at kernel/qapplication.cpp:3678
#27 0x00007f441139d043 in QApplication::notify (this=<optimized out>, receiver=0x563c574ad8f0, e=0x7ffef3915810) at kernel/qapplication.cpp:3128
#28 0x00007f4410887fe2 in QCoreApplication::notifyInternal2 (receiver=0x563c574ad8f0, event=0x7ffef3915810) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:153
#29 0x00007f441139c123 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x563c574ad8f0, event=event@entry=0x7ffef3915810, alienWidget=alienWidget@entry=0x563c574ad8f0, nativeWidget=0x563c5711c600, buttonDown=buttonDown@entry=0x7f44118c39a0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#30 0x00007f44113f15e9 in QWidgetWindow::handleMouseEvent (this=0x563c571ee230, event=0x7ffef3915c90) at /usr/include/c++/9/bits/atomic_base.h:413
#31 0x00007f44113f4684 in QWidgetWindow::event (event=0x7ffef3915c90, this=0x563c571ee230) at kernel/qwidgetwindow.cpp:295
#32 QWidgetWindow::event (this=0x563c571ee230, event=0x7ffef3915c90) at kernel/qwidgetwindow.cpp:238
#33 0x00007f4411393caf in QApplicationPrivate::notify_helper (this=this@entry=0x563c56fdfc00, receiver=receiver@entry=0x563c571ee230, e=e@entry=0x7ffef3915c90) at kernel/qapplication.cpp:3684
#34 0x00007f441139cdf0 in QApplication::notify (this=0x7ffef3916120, receiver=0x563c571ee230, e=0x7ffef3915c90) at kernel/qapplication.cpp:3430
#35 0x00007f4410887fe2 in QCoreApplication::notifyInternal2 (receiver=0x563c571ee230, event=0x7ffef3915c90) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:153
#36 0x00007f4410c9f4d3 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x563c571f6900) at kernel/qguiapplication.cpp:2209
#37 0x00007f4410ca0b65 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x563c571f6900) at kernel/qguiapplication.cpp:1941
#38 0x00007f4410c7a53b in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1163
#39 0x00007f440baf9a6a in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#40 0x00007f440e4e46e8 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#41 0x00007f440e4e4a70 in ?? () from /usr/lib64/libglib-2.0.so.0
#42 0x00007f440e4e4aff in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#43 0x00007f44108debce in QEventDispatcherGlib::processEvents (this=0x563c570c0520, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#44 0x00007f4410886b7b in QEventLoop::exec (this=this@entry=0x7ffef3916030, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#45 0x00007f441088e952 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#46 0x0000563c553929c8 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/systemsettings5-5.18.5-1.1.x86_64/app/main.cpp:70
[Inferior 1 (process 5556) detached]

Possible duplicates by query: bug 422014, bug 421828, bug 421699, bug 421053, bug 420989.

Reported using DrKonqi
Comment 1 Marco Martin 2020-05-27 10:12:44 UTC
Git commit 8e6d6e60436406b40e1894ab0eaa8e977c732662 by Marco Martin.
Committed on 27/05/2020 at 10:08.
Pushed by mart into branch 'Plasma/5.19'.

don't try to access invalid modules

if a module's service is not valid, don't try to load it
or it will assert

M  +1    -1    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/8e6d6e60436406b40e1894ab0eaa8e977c732662
Comment 2 Wolfgang Bauer 2020-06-03 11:34:58 UTC
This was actually a regression in kcmutils 5.70.0 and will be fixed in KDE Frameworks 5.71.0, see bug#421566.