don't try to access invalid modules

if a module's service is not valid, don't try to load it
or it will assert
BUG:422029